# RSTools

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  tbx_cfg_RSTools.m
etc/: rstools.conf  rstools.conf.default
fsliolib/: fslio.c
include/: rsmathutils.h  rsniftiutils.h
m4/: autotroll.m4  autotroll.mk
rstools/: Makefile  rsbandpass.c  rsbandpass2.c  rsbandpass_common.c  rsbandpass_common.h  rscentrality2.c  rsclustering2.c  rscommon.h  rscorrelation.c  rscorrelation2.c  rscorrelation_common.c  rscorrelation_common.h  rsfastcentrality2.c  rsfillholes2.c  rsinfo.c  rsmask2.c  rsmathutils.c  rsmathutils.cpp  rsmathutils.h  rsmathutils_internal.h  rsmaxindex.c  rsmotionscrubbing.c  rsmotionscrubbing2.c  rsniftiutils.c  rsniftiutils.h  rsregression.c  rsregression2.c  rsregression_common.c  rsregression_common.h  rsroi.c  rstemplatematching2.c  rstimecourse  rstimecourse.c  rstimecourse2.c  rstools.bash_completion  rsttest2.c  rsvarlengthcorrelation2.c  rsvarsubjectsttest2.c
rstools/rstools.xcodeproj/: project.pbxproj
rstools/rstools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
share/jobs/: dmn.job  empty.job  job.xsd
share/jobs/plugins/: rsapplytransformation.xsdext  rsbandpass.xsdext  rscorrelation.xsdext  rsmotionscrubbing.xsdext  rsorientation.xsdext  rsregression.xsdext  rsroi.xsdext  rsscrubbing.xsdext  unix.xsdext  (+2 more)
spmtoolbox/RSTools/: tbx_cfg_RSTools.m
src/: .gitignore  Makefile.am  rsapplytransformation.c  rsapplytransformation_common.c  rsapplytransformation_common.h  rsapplytransformation_ui.c  rsapplytransformation_ui.h  rsbandpass.c  rsbandpass_common.c  rsbandpass_common.h  rsbandpass_ui.c  rsbandpass_ui.h  rscentrality.c  rscommon.h  rscorrelation.c  rscorrelation_common.c  rscorrelation_common.h  rscorrelation_ui.c  rscorrelation_ui.h  rsdeoblique.c  rsdeoblique_common.c  rsdeoblique_common.h  rsdeoblique_ui.c  rsdeoblique_ui.h  rsfastcentrality.c  rsfillholes.c  rsinfo.c  rsinfo_common.c  rsinfo_common.h  rsinfo_ui.c  rsinfo_ui.h  rsmask.c  rsmaskborderdistance.c  rsmaskborderdistance_common.c  rsmaskborderdistance_common.h  rsmaskborderdistance_ui.c  rsmaskborderdistance_ui.h  rsmotionscrubbing.c  rsmotionscrubbing_common.c  rsmotionscrubbing_common.h  (+48 more)
src/batch/: .gitignore  Makefile.am  outputCatcher.hpp  parseErrorHandler.hpp  rsbatch.cpp  rsbatch_common.cpp  rsbatch_common.hpp  rsbatch_ui.cpp  rsbatch_ui.hpp  rsjob.cpp  rsjob.hpp  rsjobeditor.cc  rsjobparser.cpp  rsjobparser.hpp  rstask.cpp  rstask.hpp
src/batch/execution/: bandpass.cpp  bandpass.hpp  correlation.cpp  correlation.hpp  motionscrubbing.cpp  motionscrubbing.hpp  regression.cpp  regression.hpp  roi.cpp  roi.hpp  timecourse.cpp  timecourse.hpp  tool.cpp  tool.hpp  unix.cpp  unix.hpp
src/batch/jobeditor/: .gitignore  Info.plist  rsjobeditorapplication.cpp  rsjobeditorapplication.h
src/batch/jobeditor/ui/: ArgumentsModel.cpp  ArgumentsModel.h  ExtendedTabWidget.cpp  ExtendedTabWidget.h  ExtendedTabWidgetContainerExtension.cpp  ExtendedTabWidgetContainerExtension.h  ExtendedTabWidgetExtensionFactory.cpp  ExtendedTabWidgetExtensionFactory.h  ExtendedTabWidgetPlugin.cpp  ExtendedTabWidgetPlugin.h  SettingWidget.cpp  SettingWidget.h  SwitchWidget.cpp  SwitchWidget.h  TaskWidget.cpp  TaskWidget.h  jobeditor.ui
src/batch/plugins/: .gitignore  Makefile.am
src/batch/plugins/rsapplytransformation/: rsapplytransformation.cpp  rsapplytransformation.hpp
src/batch/plugins/rsapplytransformation/tool/: applytransformation.cpp  applytransformation.hpp
src/batch/plugins/rsbandpass/: rsbandpass.cpp  rsbandpass.hpp
src/batch/plugins/rsbandpass/tool/: bandpass.cpp  bandpass.hpp
src/batch/plugins/rscorrelation/: .gitignore  rscorrelation.cpp  rscorrelation.hpp
src/batch/plugins/rscorrelation/tool/: correlation.cpp  correlation.hpp
src/batch/plugins/rsmotionscrubbing/: rsmotionscrubbing.cpp  rsmotionscrubbing.hpp
src/batch/plugins/rsmotionscrubbing/tool/: motionscrubbing.cpp  motionscrubbing.hpp
src/batch/plugins/rsorientation/: rsorientation.cpp  rsorientation.hpp
src/batch/plugins/rsorientation/tool/: orientation.cpp  orientation.hpp
src/batch/plugins/rsregression/: rsregression.cpp  rsregression.hpp
src/batch/plugins/rsregression/tool/: regression.cpp  regression.hpp
src/batch/plugins/rsroi/: rsroi.cpp  rsroi.hpp
src/batch/plugins/rsroi/tool/: roi.cpp  roi.hpp
src/batch/plugins/rsscrubbing/: rsscrubbing.cpp  rsscrubbing.hpp
src/batch/plugins/rsscrubbing/tool/: scrubbing.cpp  scrubbing.hpp
src/batch/plugins/rssmoothing/: rssmoothing.cpp  rssmoothing.hpp
src/batch/plugins/rssmoothing/tool/: smoothing.cpp  smoothing.hpp
src/batch/plugins/rstimecourse/: rstimecourse.cpp  rstimecourse.hpp
src/batch/plugins/rstimecourse/tool/: timecourse.cpp  timecourse.hpp
src/batch/plugins/unix/: .gitignore  unix.cpp  unix.hpp
src/batch/plugins/unix/task/: unix.cpp  unix.hpp
src/batch/plugins/unix/tool/: unix.cpp  unix.hpp
src/batch/util/: .gitignore  Makefile.am  outputCatcher.hpp  parseErrorHandler.hpp  plugin.cpp  plugin.hpp  pluginmanager.cpp  pluginmanager.hpp  rsconfig.cpp  rsconfig.hpp  rsjob.cpp  rsjob.hpp  rsjobparser.cpp  rsjobparser.hpp  rstask.cpp  rstask.hpp  rstool.cpp  rstool.hpp  rsunix.cpp  rsunix.hpp  rsunixtask.cpp  rsunixtask.hpp  rsunixtool.cpp  rsunixtool.hpp
src/incubator/: .gitignore  Makefile.am  rscentrality.c  rsfastcentrality.c  rsfillholes.c
src/maths/: Makefile.am  correlation.c  correlation.h  filter.c  filter.h  geom.c  geom.h  interpolation.c  interpolation.h  linalg.c  linalg.h  multivar_analysis.c  multivar_analysis.h  regression.c  regression.h  rsmathutils.c  rsmathutils.h  stats.c  stats.h  utils.c  utils.h
src/nifti/: Makefile.am  dicomfinder.c  dicomfinder.h  headerinfo.c  headerinfo.h  rsniftiutils.c  rsniftiutils.h
src/playground/: rstemplatematching.c  rstemplatematching2.c  rsvarlengthcorrelation.c  rsvarsubjectsttest.c
src/utils/: Makefile.am  rsconfig.c  rsconfig.h  rsio.c  rsio.h  rsmemory.c  rsmemory.h  rsstring.c  rsstring.h  rsui.c  rsui.h
utils/: nifti1_test  nifti_stats  nifti_tool
(+7 files in other folders)
